--- a/store/templates/store/Store.html
+++ b/store/templates/store/Store.html
@@ -1,7 +1,7 @@
-
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
-
+{% extends 'store/Main.html' %} 
+{% load static %} 
+{% block content %}
 <h3>store</h3>
 
+{% endblock content %}
 <img src="{% static 'images/cart.png' %}" />
